// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files 1`] = `
Array [
  "employee-certification.form-group-fac.ts",
  "employee-certification.model.ts",
  "employee-certification.properties.ts",
  "employee-competency.form-group-fac.ts",
  "employee-competency.model.ts",
  "employee-competency.properties.ts",
  "employee-health-item.form-group-fac.ts",
  "employee-health-item.model.ts",
  "employee-health-item.properties.ts",
  "employee.form-group-fac.ts",
  "employee.model.ts",
  "employee.properties.ts",
  "index.ts",
]
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function EmployeeFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl('', Validators.required),
    lastName: new FormControl('', Validators.compose([Validators.required, Validators.maxLength(250)])),
    firstName: new FormControl('', Validators.compose([Validators.required, Validators.maxLength(250)])),
    birthDate: new FormControl(''),
    mobilePhone: new FormControl('', Validators.maxLength(25)),
    homePhone: new FormControl('', Validators.maxLength(25)),
    photo: new FormControl('', Validators.maxLength(4000)),
    email: new FormControl('', Validators.compose([Validators.required, Validators.maxLength(250)])),
    addressLine1: new FormControl('', Validators.maxLength(250)),
    addressLine2: new FormControl('', Validators.maxLength(250)),
    city: new FormControl('', Validators.maxLength(150)),
    state: new FormControl('', Validators.maxLength(2)),
    zip: new FormControl('', Validators.maxLength(10)),
    isEnabled: new FormControl('', Validators.required),
    hireDate: new FormControl('', Validators.required),
    fireDate: new FormControl(''),
    totalHoursOfService: new FormControl(''),
    certificationCount: new FormControl('', Validators.required),
    competencyCount: new FormControl('', Validators.required),
    healthItemCount: new FormControl('', Validators.required),
    employeeCertifications: new FormControl(''),
    employeeCompetencies: new FormControl(''),
    employeeHealthItems: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { IEmployeeCertification } from './employee-certification.model';
import { IEmployeeCompetency } from './employee-competency.model';
import { IEmployeeHealthItem } from './employee-health-item.model';

export interface IEmployee {
  id?: string;
  lastName?: string;
  firstName?: string;
  birthDate?: Date;
  mobilePhone?: string;
  homePhone?: string;
  photo?: string;
  email?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  isEnabled?: boolean;
  hireDate?: Date;
  fireDate?: Date;
  totalHoursOfService?: number;
  certificationCount?: number;
  competencyCount?: number;
  healthItemCount?: number;
  employeeCertifications?: IEmployeeCertification[];
  employeeCompetencies?: IEmployeeCompetency[];
  employeeHealthItems?: IEmployeeHealthItem[];
}
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum EmployeeProperties {
  ID = 'id',
  LAST_NAME = 'lastName',
  FIRST_NAME = 'firstName',
  BIRTH_DATE = 'birthDate',
  MOBILE_PHONE = 'mobilePhone',
  HOME_PHONE = 'homePhone',
  PHOTO = 'photo',
  EMAIL = 'email',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  IS_ENABLED = 'isEnabled',
  HIRE_DATE = 'hireDate',
  FIRE_DATE = 'fireDate',
  TOTAL_HOURS_OF_SERVICE = 'totalHoursOfService',
  CERTIFICATION_COUNT = 'certificationCount',
  COMPETENCY_COUNT = 'competencyCount',
  HEALTH_ITEM_COUNT = 'healthItemCount',
  EMPLOYEE_CERTIFICATIONS = 'employeeCertifications',
  EMPLOYEE_COMPETENCIES = 'employeeCompetencies',
  EMPLOYEE_HEALTH_ITEMS = 'employeeHealthItems',
}
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee-certification.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function EmployeeCertificationFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    employeeId: new FormControl(''),
    certificationId: new FormControl(''),
    certificationName: new FormControl(''),
    expiresOnUtc: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee-certification.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IEmployeeCertification {
  id?: string;
  employeeId?: string;
  certificationId?: string;
  certificationName?: string;
  expiresOnUtc?: Date;
}
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee-certification.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum EmployeeCertificationProperties {
  ID = 'id',
  EMPLOYEE_ID = 'employeeId',
  CERTIFICATION_ID = 'certificationId',
  CERTIFICATION_NAME = 'certificationName',
  EXPIRES_ON_UTC = 'expiresOnUtc',
}
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee-competency.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function EmployeeCompetencyFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    employeeId: new FormControl(''),
    competencyId: new FormControl(''),
    competencyName: new FormControl(''),
    expiresOnUtc: new FormControl(''),
    isEnabled: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee-competency.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IEmployeeCompetency {
  id?: string;
  employeeId?: string;
  competencyId?: string;
  competencyName?: string;
  expiresOnUtc?: Date;
  isEnabled?: boolean;
}
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee-competency.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum EmployeeCompetencyProperties {
  ID = 'id',
  EMPLOYEE_ID = 'employeeId',
  COMPETENCY_ID = 'competencyId',
  COMPETENCY_NAME = 'competencyName',
  EXPIRES_ON_UTC = 'expiresOnUtc',
  IS_ENABLED = 'isEnabled',
}
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee-health-item.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function EmployeeHealthItemFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    employeeId: new FormControl(''),
    healthItemId: new FormControl(''),
    healthItemName: new FormControl(''),
    expiresOnUtc: new FormControl(''),
    isEnabled: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee-health-item.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IEmployeeHealthItem {
  id?: string;
  employeeId?: string;
  healthItemId?: string;
  healthItemName?: string;
  expiresOnUtc?: Date;
  isEnabled?: boolean;
}
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: employee-health-item.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum EmployeeHealthItemProperties {
  ID = 'id',
  EMPLOYEE_ID = 'employeeId',
  HEALTH_ITEM_ID = 'healthItemId',
  HEALTH_ITEM_NAME = 'healthItemName',
  EXPIRES_ON_UTC = 'expiresOnUtc',
  IS_ENABLED = 'isEnabled',
}
"
`;

exports[`Full Integration Tests File Based - NRSRx Employee OData Microservice should generate files: index.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './employee-certification.form-group-fac';
export * from './employee-certification.model';
export * from './employee-certification.properties';
export * from './employee-competency.form-group-fac';
export * from './employee-competency.model';
export * from './employee-competency.properties';
export * from './employee-health-item.form-group-fac';
export * from './employee-health-item.model';
export * from './employee-health-item.properties';
export * from './employee.form-group-fac';
export * from './employee.model';
export * from './employee.properties';
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files 1`] = `
Array [
  "account-insert-request.form-group-fac.ts",
  "account-insert-request.model.ts",
  "account-insert-request.properties.ts",
  "account-update-request.form-group-fac.ts",
  "account-update-request.model.ts",
  "account-update-request.properties.ts",
  "account.form-group-fac.ts",
  "account.model.ts",
  "account.properties.ts",
  "contact-insert-request.form-group-fac.ts",
  "contact-insert-request.model.ts",
  "contact-insert-request.properties.ts",
  "contact-update-request.form-group-fac.ts",
  "contact-update-request.model.ts",
  "contact-update-request.properties.ts",
  "contact.form-group-fac.ts",
  "contact.model.ts",
  "contact.properties.ts",
  "index.ts",
]
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: account.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function AccountFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    refId: new FormControl(''),
    name: new FormControl(''),
    parentAccountId: new FormControl(''),
    isEnabled: new FormControl(''),
    emailInvoice: new FormControl(''),
    tenantId: new FormControl(''),
    parentAccount: new FormControl(''),
    contacts: new FormControl(''),
    inverseParentAccount: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: account.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { IContact } from './contact.model';

export interface IAccount {
  id?: string;
  refId?: string;
  name?: string;
  parentAccountId?: string;
  isEnabled?: boolean;
  emailInvoice?: boolean;
  tenantId?: string;
  parentAccount?: IAccount;
  contacts?: IContact[];
  inverseParentAccount?: IAccount[];
}
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: account.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function AccountInsertRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    refId: new FormControl(''),
    name: new FormControl('', Validators.required),
    parentAccountId: new FormControl(''),
    emailInvoice: new FormControl(''),
    contacts: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { IContact } from './contact.model';

export interface IAccountInsertRequest {
  id?: string;
  refId?: string;
  name?: string;
  parentAccountId?: string;
  emailInvoice?: boolean;
  contacts?: IContact[];
}
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: account-update-request.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function AccountUpdateRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    refId: new FormControl('', Validators.required),
    name: new FormControl('', Validators.required),
    parentAccountId: new FormControl(''),
    isEnabled: new FormControl(''),
    emailInvoice: new FormControl(''),
    contacts: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: account-update-request.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { IContact } from './contact.model';

export interface IAccountUpdateRequest {
  id?: string;
  refId?: string;
  name?: string;
  parentAccountId?: string;
  isEnabled?: boolean;
  emailInvoice?: boolean;
  contacts?: IContact[];
}
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: account-update-request.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: contact.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function ContactFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    isEnabled: new FormControl(''),
    contactTypeId: new FormControl('', Validators.required),
    accountId: new FormControl('', Validators.required),
    firstName: new FormControl('', Validators.required),
    lastName: new FormControl('', Validators.required),
    middleName: new FormControl(''),
    addressLine1: new FormControl('', Validators.required),
    addressLine2: new FormControl(''),
    city: new FormControl('', Validators.required),
    state: new FormControl('', Validators.required),
    zip: new FormControl('', Validators.required),
    emails: new FormControl(''),
    phone1: new FormControl(''),
    phone2: new FormControl(''),
    account: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: contact.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { IAccount } from './account.model';

export interface IContact {
  id?: string;
  isEnabled?: boolean;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string;
  phone1?: string;
  phone2?: string;
  account?: IAccount;
}
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: contact.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function ContactInsertRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    contactTypeId: new FormControl('', Validators.required),
    accountId: new FormControl('', Validators.required),
    firstName: new FormControl('', Validators.required),
    lastName: new FormControl('', Validators.required),
    middleName: new FormControl(''),
    addressLine1: new FormControl('', Validators.required),
    addressLine2: new FormControl(''),
    city: new FormControl('', Validators.required),
    state: new FormControl('', Validators.required),
    zip: new FormControl('', Validators.required),
    emails: new FormControl(''),
    phone1: new FormControl(''),
    phone2: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IContactInsertRequest {
  id?: string;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string;
  phone1?: string;
  phone2?: string;
}
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function ContactUpdateRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl('', Validators.required),
    contactTypeId: new FormControl('', Validators.required),
    accountId: new FormControl('', Validators.required),
    firstName: new FormControl('', Validators.required),
    lastName: new FormControl('', Validators.required),
    middleName: new FormControl(''),
    addressLine1: new FormControl('', Validators.required),
    addressLine2: new FormControl(''),
    city: new FormControl('', Validators.required),
    state: new FormControl('', Validators.required),
    zip: new FormControl('', Validators.required),
    emails: new FormControl(''),
    phone1: new FormControl(''),
    phone2: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IContactUpdateRequest {
  id?: string;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string;
  phone1?: string;
  phone2?: string;
}
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Account Service should generate files: index.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './account-insert-request.form-group-fac';
export * from './account-insert-request.model';
export * from './account-insert-request.properties';
export * from './account-update-request.form-group-fac';
export * from './account-update-request.model';
export * from './account-update-request.properties';
export * from './account.form-group-fac';
export * from './account.model';
export * from './account.properties';
export * from './contact-insert-request.form-group-fac';
export * from './contact-insert-request.model';
export * from './contact-insert-request.properties';
export * from './contact-update-request.form-group-fac';
export * from './contact-update-request.model';
export * from './contact-update-request.properties';
export * from './contact.form-group-fac';
export * from './contact.model';
export * from './contact.properties';
"
`;

exports[`Full Integration Tests MasterCorp Messaging Service should generate files 1`] = `
Array [
  "index.ts",
  "message-dto.form-group-fac.ts",
  "message-dto.model.ts",
  "message-dto.properties.ts",
  "recipient.form-group-fac.ts",
  "recipient.model.ts",
  "recipient.properties.ts",
]
`;

exports[`Full Integration Tests MasterCorp Messaging Service should generate files: index.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './message-dto.form-group-fac';
export * from './message-dto.model';
export * from './message-dto.properties';
export * from './recipient.form-group-fac';
export * from './recipient.model';
export * from './recipient.properties';
"
`;

exports[`Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function MessageDtoFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    body: new FormControl('', Validators.required),
    recipients: new FormControl('', Validators.required),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { IRecipient } from './recipient.model';

export interface IMessageDto {
  id?: string;
  body?: string;
  recipients?: IRecipient[];
}
"
`;

exports[`Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Messaging Service should generate files: recipient.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function RecipientFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl('', Validators.required),
    ultiId: new FormControl('', Validators.required),
    firstName: new FormControl('', Validators.required),
    middleName: new FormControl(''),
    lastName: new FormControl('', Validators.required),
    cellPhone1: new FormControl(''),
    homePhone1: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Messaging Service should generate files: recipient.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IRecipient {
  id?: string;
  ultiId?: string;
  firstName?: string;
  middleName?: string;
  lastName?: string;
  cellPhone1?: string;
  homePhone1?: string;
}
"
`;

exports[`Full Integration Tests MasterCorp Messaging Service should generate files: recipient.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files 1`] = `
Array [
  "building.form-group-fac.ts",
  "building.model.ts",
  "building.properties.ts",
  "index.ts",
  "site-collection.form-group-fac.ts",
  "site-collection.model.ts",
  "site-collection.properties.ts",
  "site.form-group-fac.ts",
  "site.model.ts",
  "site.properties.ts",
  "tag.form-group-fac.ts",
  "tag.model.ts",
  "tag.properties.ts",
  "unit-tag.form-group-fac.ts",
  "unit-tag.model.ts",
  "unit-tag.properties.ts",
  "unit-type.form-group-fac.ts",
  "unit-type.model.ts",
  "unit-type.properties.ts",
  "unit.form-group-fac.ts",
  "unit.model.ts",
  "unit.properties.ts",
]
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: building.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function BuildingFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    siteId: new FormControl(''),
    identifier: new FormControl(''),
    isEnabled: new FormControl(''),
    site: new FormControl(''),
    units: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: building.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { ISite } from './site.model';
import { IUnit } from './unit.model';

export interface IBuilding {
  id?: string;
  siteId?: string;
  identifier?: string;
  isEnabled?: boolean;
  site?: ISite;
  units?: IUnit[];
}
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: building.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: index.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './building.form-group-fac';
export * from './building.model';
export * from './building.properties';
export * from './site-collection.form-group-fac';
export * from './site-collection.model';
export * from './site-collection.properties';
export * from './site.form-group-fac';
export * from './site.model';
export * from './site.properties';
export * from './tag.form-group-fac';
export * from './tag.model';
export * from './tag.properties';
export * from './unit-tag.form-group-fac';
export * from './unit-tag.model';
export * from './unit-tag.properties';
export * from './unit-type.form-group-fac';
export * from './unit-type.model';
export * from './unit-type.properties';
export * from './unit.form-group-fac';
export * from './unit.model';
export * from './unit.properties';
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: site.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function SiteFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    tenantId: new FormControl(''),
    accountId: new FormControl(''),
    accountName: new FormControl(''),
    siteCollectionId: new FormControl(''),
    number: new FormControl(''),
    name: new FormControl(''),
    addressLine1: new FormControl(''),
    addressLine2: new FormControl(''),
    city: new FormControl(''),
    state: new FormControl(''),
    zip: new FormControl(''),
    isEnabled: new FormControl(''),
    siteCollection: new FormControl(''),
    buildings: new FormControl(''),
    units: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: site.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { ISiteCollection } from './site-collection.model';
import { IBuilding } from './building.model';
import { IUnit } from './unit.model';

export interface ISite {
  id?: string;
  tenantId?: string;
  accountId?: string;
  accountName?: string;
  siteCollectionId?: string;
  number?: string;
  name?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  isEnabled?: boolean;
  siteCollection?: ISiteCollection;
  buildings?: IBuilding[];
  units?: IUnit[];
}
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: site.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: site-collection.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function SiteCollectionFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    tenantId: new FormControl(''),
    number: new FormControl('', Validators.required),
    name: new FormControl('', Validators.required),
    code: new FormControl('', Validators.required),
    addressLine1: new FormControl(''),
    addressLine2: new FormControl(''),
    city: new FormControl(''),
    state: new FormControl('', Validators.compose([Validators.maxLength(2), Validators.minLength(2)])),
    zip: new FormControl('', Validators.compose([Validators.maxLength(10), Validators.minLength(5)])),
    isSchedulerEnabled: new FormControl('', Validators.required),
    siteCount: new FormControl(''),
    workCategoryTypes: new FormControl('', Validators.required),
    buildings: new FormControl(''),
    sites: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: site-collection.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { IBuilding } from './building.model';
import { ISite } from './site.model';

export interface ISiteCollection {
  id?: string;
  tenantId?: string;
  number?: string;
  name?: string;
  code?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  isSchedulerEnabled?: boolean;
  siteCount?: number;
  workCategoryTypes?: number;
  buildings?: IBuilding[];
  sites?: ISite[];
}
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: site-collection.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: tag.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function TagFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    name: new FormControl(''),
    value: new FormControl(''),
    unitTags: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: tag.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { IUnitTag } from './unit-tag.model';

export interface ITag {
  id?: string;
  name?: string;
  value?: string;
  unitTags?: IUnitTag[];
}
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: tag.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: unit.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function UnitFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    number: new FormControl(''),
    unitTypeId: new FormControl(''),
    siteId: new FormControl(''),
    buildingId: new FormControl(''),
    isEnabled: new FormControl(''),
    building: new FormControl(''),
    site: new FormControl(''),
    unitType: new FormControl(''),
    unitTags: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: unit.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { IBuilding } from './building.model';
import { ISite } from './site.model';
import { IUnitType } from './unit-type.model';
import { IUnitTag } from './unit-tag.model';

export interface IUnit {
  id?: string;
  number?: string;
  unitTypeId?: string;
  siteId?: string;
  buildingId?: string;
  isEnabled?: boolean;
  building?: IBuilding;
  site?: ISite;
  unitType?: IUnitType;
  unitTags?: IUnitTag[];
}
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: unit.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function UnitTagFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    unitId: new FormControl(''),
    tagId: new FormControl(''),
    value: new FormControl(''),
    tag: new FormControl(''),
    unit: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { ITag } from './tag.model';
import { IUnit } from './unit.model';

export interface IUnitTag {
  id?: string;
  unitId?: string;
  tagId?: string;
  value?: string;
  tag?: ITag;
  unit?: IUnit;
}
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: unit-type.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function UnitTypeFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    code: new FormControl(''),
    description: new FormControl(''),
  });
};
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: unit-type.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IUnitType {
  id?: string;
  code?: string;
  description?: string;
}
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should generate files: unit-type.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
"
`;

exports[`Full Integration Tests MasterCorp Unit Service should not generate files 1`] = `Array []`;
